Restructured code and adapted layout of framework version error dialog (#1466)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5997 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/3.3/HeuristicLab.PluginInfrastructure-3.3.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/3.3/HeuristicLab.PluginInfrastructure-3.3.csproj
@@ -220,12 +220,6 @@
     <Compile Include="BaseClasses\ApplicationBase.cs" />
     <Compile Include="BaseClasses\PluginBase.cs" />
     <Compile Include="DefaultApplicationManager.cs" />
-    <Compile Include="ErrorHandling\FrameworkVersionWarning.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ErrorHandling\FrameworkVersionWarning.Designer.cs">
-      <DependentUpon>FrameworkVersionWarning.cs</DependentUpon>
-    </Compile>
     <Compile Include="ErrorHandling\ErrorDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -233,6 +227,12 @@
       <DependentUpon>ErrorDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="ErrorHandling\ErrorHandling.cs">
+    </Compile>
+    <Compile Include="ErrorHandling\FrameworkVersionErrorDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ErrorHandling\FrameworkVersionErrorDialog.Designer.cs">
+      <DependentUpon>FrameworkVersionErrorDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="LightweightApplicationManager.cs" />
     <Compile Include="Interfaces\IPluginFile.cs" />
