#1455 fixed bug in estimated values view for clustering solutions and added a view for kMeans clustering models showing the cluster centers.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6003 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.DataAnalysis.Views/3.4/HeuristicLab.Algorithms.DataAnalysis.Views-3.4.csproj
+++ b/sources/HeuristicLab.Algorithms.DataAnalysis.Views/3.4/HeuristicLab.Algorithms.DataAnalysis.Views-3.4.csproj
@@ -113,6 +113,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KMeansClusteringModelView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="KMeansClusteringModelView.Designer.cs">
+      <DependentUpon>KMeansClusteringModelView.cs</DependentUpon>
+    </Compile>
     <Compile Include="SupportVectorMachineModelSupportVectorsView.cs">
       <SubType>UserControl</SubType>
     </Compile>
