#1425  * Changed !LocalImprovementOperators   * Changed interface (made Problem a property, added a property that denotes the type of the problem that it can be applied on, added some general parameters)   * Added some parameters and wiring   * Changed move discovery and parameterization and added a helper class to ease finding compatible move operators   * Discovering only `IMultiMoveOperators` and `IExhaustiveMoveOperators` and putting the multi move ones first   * Fixed bug in Apply method that could create an endless string of nested execution contexts   * Removed all problem specific analyzers in the two local improvement operators and only left the `BestAverageWorstQualityAnalyzer` since it doesn't make any sense to perform diversity or allele analysis during local improvement in the most common case and those analyzers take a lot of time (one can always add them manually should he/she be interested). The analyzers in the VNS's `Analyzer` parameter are left untouched.  * Removed shaking operator and interface from VNS plugin and added that to Optimization and Optimization.Operators  * Changed some `ValueParameters` to `ConstrainedValueParameters` and added type discovery to fill them (using the ProblemType property to get compatible local improvement operators)  * Added missing GPL license headers  * Changed some `ValueParameters` to the new `FixedValueParameters`  * Added an additional encoding specific !ShakingOperator to each encoding and added that to each problem   * reason is that only the problem/encoding can really decide if a shaking operator is meaningful or not  * Fixed an unrelated bug in the `BestAverageWorstQualityAnalyzer` that I encountered (and made the fix backwards compatible)   * Also added a snippet for creating the backwards compatible comment marker and region  * Fixed the operator graph of the VNS main loop   * The condition to continue only when the local search was not successful is not necessary and is not part of the VNS definition 

--- a/sources/HeuristicLab.Encodings.IntegerVectorEncoding/3.3/HeuristicLab.Encodings.IntegerVectorEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.IntegerVectorEncoding/3.3/HeuristicLab.Encodings.IntegerVectorEncoding-3.3.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>HeuristicLab.Encodings.IntegerVectorEncoding</RootNamespace>
     <AssemblyName>HeuristicLab.Encodings.IntegerVectorEncoding-3.3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
@@ -116,6 +117,7 @@
     <Compile Include="Interfaces\IIntegerVectorCreator.cs" />
     <Compile Include="Interfaces\IIntegerVectorCrossover.cs" />
     <Compile Include="Interfaces\IIntegerVectorManipulator.cs" />
+    <Compile Include="Interfaces\IIntegerVectorMultiNeighborhoodShakingOperator.cs" />
     <Compile Include="Interfaces\IIntegerVectorOperator.cs" />
     <Compile Include="IntegerVectorCrossover.cs" />
     <Compile Include="IntegerVectorManipulator.cs" />
@@ -125,6 +127,7 @@
     <Compile Include="IntegerVector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IntegerVectorCreator.cs" />
+    <Compile Include="ShakingOperators\IntegerVectorShakingOperator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
@@ -146,6 +149,10 @@
     <ProjectReference Include="..\..\HeuristicLab.Operators\3.3\HeuristicLab.Operators-3.3.csproj">
       <Project>{23DA7FF4-D5B8-41B6-AA96-F0561D24F3EE}</Project>
       <Name>HeuristicLab.Operators-3.3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Optimization.Operators\3.3\HeuristicLab.Optimization.Operators-3.3.csproj">
+      <Project>{25087811-F74C-4128-BC86-8324271DA13E}</Project>
+      <Name>HeuristicLab.Optimization.Operators-3.3</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Optimization\3.3\HeuristicLab.Optimization-3.3.csproj">
       <Project>{14AB8D24-25BC-400C-A846-4627AA945192}</Project>
