#1424  * created extension method `GetObjectGraphObjects` for objects  * created `IStatefulItem` interface, which means an object has a state which can be initialized and cleared  * after an algorithm stopped, all objects of the algorithm-objectgraph with the type `IStatefulItem` are cleared  * on prepare, all `IStatefulItem` objects are initialized
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6103 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
+++ b/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Content\ContentManager.cs" />
     <Compile Include="Content\IStorableContent.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="ObjectExtensions.cs" />
     <Compile Include="DeepCloneable.cs" />
     <Compile Include="Content\IContent.cs" />
     <Compile Include="EnumerableStatisticExtensions.cs" />
