Add new CachedExternalEvaluator with replaceable permanent cache of all evaluated solutions (#1516)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6140 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
@@ -110,6 +110,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabProblemsExternalEvaluationViewsPlugin.cs.frame" />
+    <Compile Include="EvaluationCacheView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EvaluationCacheView.Designer.cs">
+      <DependentUpon>EvaluationCacheView.cs</DependentUpon>
+    </Compile>
     <Compile Include="EvaluationServiceClientView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -195,6 +201,11 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="EvaluationCacheView.resx">
+      <DependentUpon>EvaluationCacheView.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
