#1517 - rewrote Logger to use Diagnostics.Trace - removed HiveLogger as it's not used anymore - removed dependency from Persistence to log4net - ConfigMerger now also merges <system.diagnostics> sections
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6173 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Tracing/3.3/app.config
+++ b/sources/HeuristicLab.Tracing/3.3/app.config
@@ -1,5 +1,15 @@
 <?xml version="1.0"?>
-<configuration>
+<configuration>        
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="HeuristicLabListener"
+          type="System.Diagnostics.TextWriterTraceListener"
+          initializeData="HeuristicLab.log" />
+        <remove name="Default" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
   <configSections>    
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="HeuristicLab.Tracing.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
@@ -7,9 +17,7 @@
   </configSections>
   <userSettings>
     <HeuristicLab.Tracing.Properties.Settings>
-      <setting name="TracingLog4netConfigFile" serializeAs="String">
-        <value/>
-      </setting>
+    
     </HeuristicLab.Tracing.Properties.Settings>
   </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
