#1522: Updated object graph traversing.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6201 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
+++ b/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
@@ -122,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CloningConstructorTest.cs" />
+    <Compile Include="CollectObjectGraphTest.cs" />
     <Compile Include="ContentViewTests.cs" />
     <Compile Include="SymbolicRegressionTest.cs" />
     <Compile Include="PluginDependenciesTest.cs" />
