#1522  * simplified check for `EventHandler` (by simply checking for delegate)  * special handling types which use a hashtable internally (dictionaries, hashset, hashtable, ...) (as discussed with swagner)  * added testcase which shows a stack overflow if `ThreadLocal` is included and compiler is on Debug (it does not happen in Release)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6205 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
+++ b/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
@@ -121,6 +121,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlgorithmExtensions.cs" />
     <Compile Include="CloningConstructorTest.cs" />
     <Compile Include="CollectObjectGraphTest.cs" />
     <Compile Include="ContentViewTests.cs" />
@@ -556,6 +557,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="GA_TSP.hl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="GA_SymbReg2.hl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
