#1522  * fixed missing file
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6207 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab/3.3/HeuristicLab-3.3.csproj
+++ b/sources/HeuristicLab/3.3/HeuristicLab-3.3.csproj
@@ -128,7 +128,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="app.config" />
+    <None Include="HeuristicLab.Hive.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="CustomPostBuild.cmd" />
     <None Include="CopyAssemblies.cmd" />
     <None Include="CustomPostBuildTemplate_UpdateLocalInstallation.cmd" />
