--- a/sources/HeuristicLab.MainForm/3.3/HeuristicLab.MainForm-3.3.csproj
+++ b/sources/HeuristicLab.MainForm/3.3/HeuristicLab.MainForm-3.3.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>HeuristicLab.MainForm</RootNamespace>
     <AssemblyName>HeuristicLab.MainForm-3.3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
@@ -110,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabMainFormPlugin.cs.frame" />
+    <Compile Include="Interfaces\IConfigureableView.cs" />
     <Compile Include="ViewAttribute.cs" />
     <Compile Include="Interfaces\IContentView.cs" />
     <Compile Include="Interfaces\IActionUserInterfaceItem.cs" />
