--- a/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
+++ b/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
@@ -108,6 +108,7 @@
     <Compile Include="BestSelector.cs" />
     <Compile Include="ConditionalSelector.cs" />
     <Compile Include="CrowdedTournamentSelector.cs" />
+    <Compile Include="GeneralizedRankSelector.cs" />
     <Compile Include="LeftSelector.cs" />
     <Compile Include="NoSameMatesSelector.cs" />
     <Compile Include="RandomReplacer.cs" />
